--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Tags-->
     <!--Headings-->
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
@@ -13,5 +14,32 @@
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
     <h6>Headgin 6</h6>
+    <hr>
+
+    <!--Paragrpah-->
+    <p>This is a Paragraph</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ab beatae culpa inventore atque quam natus possimus molestias reiciendis labore, nostrum nesciunt sequi aspernatur illum id perferendis, laudantium deserunt nihil!</p>
+    <hr>
+
+    <!--Anchor Tag-->
+    <a href="https://www.google.com" alt="Google">Google</a>
+    <hr>
+
+    <!--Break Tags-->
+    <!--br, hr-->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Error alias dolores ullam optio. Aspernatur temporibus neque sapiente vero, nisi incidunt asperiores<br> consequuntur porro, iste unde minus. Ipsa officia nemo nostrum?</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum saepe maiores, tempore, inventore ad aut quisquam dolorum laboriosam delectus pariatur temporibus. Ad, repellat maiores. Asperiores minus obcaecati et veniam dolores.</p>
+    <hr>
+
+    <!--Text Formatting Tags-->
+    <!--strong, em, b, i, u-->
+    <p><strong>This is strong text</strong></p>
+    <p><em>HI!!!</em></p>
+    <p><i>Mamma mia!</i></p>
+    <p>I am <b>bold</b></p>
+    <p><u>Underline</u> text</p>
+    <hr>
+    
 </body>
 </html>
