--- a/CSS/01_index.html
+++ b/CSS/01_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Selectors</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="01_index.css" />
   </head>
   <body>
     <h1>I am creating website using CSS selectors</h1>
