--- a/Tailwind CSS/src/resume.html
+++ b/Tailwind CSS/src/resume.html
@@ -73,7 +73,7 @@
         <!-- Hero Section -->
         <div class="space-y-4">
           <h1 class="text-5xl md:text-6xl font-extrabold drop-shadow-lg">
-            Hello, I'm <span class="text-yellow-300">Sophia Ray</span>
+            Hello, I'm <span class="text-yellow-300">Suchit Manthen</span>
           </h1>
           <p class="text-lg md:text-2xl max-w-3xl mx-auto text-white/90">
             A passionate Full-Stack Developer crafting modern, stunning, and
@@ -120,7 +120,7 @@
 
     <!-- Skills -->
     <section
-      class="py-24 bg-gradient-to-br from-purple-500 via-pink-500 to-indigo-500 text-white px-6"
+      class="py-24 bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 text-white px-6"
     >
       <div class="max-w-5xl mx-auto text-center space-y-12">
         <h2 class="text-3xl font-bold mb-4">My Skills</h2>
@@ -177,7 +177,7 @@
           </div>
           <!-- Project Card 2 -->
           <div
-            class="bg-gradient-to-br from-indigo-400 to-purple-600 text-white rounded-lg shadow-lg overflow-hidden"
+            class="bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 text-white rounded-lg shadow-lg overflow-hidden"
           >
             <img
               src="https://source.unsplash.com/600x400/?software,webdesign"
@@ -194,7 +194,7 @@
           </div>
           <!-- Project Card 3 -->
           <div
-            class="bg-gradient-to-br from-pink-300 to-purple-500 text-white rounded-lg shadow-lg overflow-hidden"
+            class="bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 text-white rounded-lg shadow-lg overflow-hidden"
           >
             <img
               src="https://source.unsplash.com/600x400/?coding,developer"
@@ -216,7 +216,7 @@
     <!-- Contact -->
     <section
       id="contact"
-      class="py-24 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white px-6"
+      class="py-24 bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 text-white px-6"
     >
       <div class="max-w-xl mx-auto text-center space-y-8">
         <h2 class="text-3xl font-bold">Let's Work Together</h2>
@@ -251,7 +251,7 @@
 
     <!-- Footer -->
     <footer class="py-6 bg-black text-white text-center">
-      <p>© 2025 Sophia Ray — All Rights Reserved</p>
+      <p>© 2025 Suchit Manthen — All Rights Reserved</p>
     </footer>
   </body>
 </html>
